# MarthonSimCpp

./: CMakeLists.txt  readme.md
lib/: coureur.cpp  coureur.hpp  etape.cpp  etape.hpp  inOut.cpp  inOut.hpp
src/: main.cpp
userFiles/: etapes.txt  participants.txt  resultats.txt
